tests/test-files/parse-fn.txt
================================================================================
100 Malformed function
================================================================================

(package test-package)

(define f (fn))

--------------------------------------------------------------------------------

error: Malformed function
  --> test:3:13
   |
 3 |  (define f (fn))
   |               ^ expected function arguments

================================================================================
101 Malformed function
================================================================================

(package test-package)

(define f (fn ()))

--------------------------------------------------------------------------------

error: Malformed function
  --> test:3:16
   |
 3 |  (define f (fn ()))
   |                  ^ expected function body

================================================================================
102 Malformed function
================================================================================

(package test-package)

(define f (fn x 1))

--------------------------------------------------------------------------------

error: Malformed function
  --> test:3:14
   |
 3 |  (define f (fn x 1))
   |                ^ malformed argument list
help: add parentheses
 3 | (define f (fn (x) 1))
   |               ---
